refactored codebase to remove broken code and updated readme

--- a/genai-usecases/llm-providers/notebooks/groq.ipynb
+++ b/genai-usecases/llm-providers/notebooks/groq.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "HxxOWz9dpsYj"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/1P5RHD7UBfPTMhgQTJ0i4DK4ScsYZuTOU?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -24,71 +13,66 @@
         "\n",
         "1. [Get Started with Groq API](https://groq.com/)\n",
         "2. [Learn LangChain Basics](https://python.langchain.com/docs/tutorials/)"
-      ],
-      "metadata": {
-        "id": "HxxOWz9dpsYj"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Install required libraries"
-      ],
       "metadata": {
         "id": "Y3axTI0sp5Hg"
-      }
+      },
+      "source": [
+        "### Install required libraries"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -qU langchain-groq>=0.3.7"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ShxTNxM5gqtr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -qU langchain-groq>=0.3.7"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Import Groq related libraries"
-      ],
       "metadata": {
         "id": "9jJ1vqs-p_Zx"
-      }
+      },
+      "source": [
+        "### Import Groq related libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RL-3LsYogoH5"
+      },
+      "outputs": [],
       "source": [
         "from langchain_groq import ChatGroq\n",
         "import getpass\n",
         "import os"
-      ],
-      "metadata": {
-        "id": "RL-3LsYogoH5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "F6UeDlrgqI2A"
+      },
       "source": [
         "#### Provide a Groq API key. You can create one to access free open models at the following link.\n",
         "\n",
         "[Groq API Generation Link](https://console.groq.com/keys)\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "F6UeDlrgqI2A"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +80,6 @@
         "id": "yobvrD3glfd4",
         "outputId": "4b5a2cf1-2172-499c-9db0-0e32d0bde00f"
       },
-      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -105,10 +88,16 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sABnivW6Z_A8"
+      },
       "source": [
         "### Run the Program\n",
         "1. [LangChain Doc](https://python.langchain.com/docs/integrations/chat/groq/)\n",
@@ -133,13 +122,15 @@
         "\n",
         "4. `max_output_tokens` → Maximum length of the answer.\n",
         "    - 512 = the model will stop once it has generated about 512 tokens (roughly 350-400 words)."
-      ],
-      "metadata": {
-        "id": "sABnivW6Z_A8"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B5I5PCsKNP2N"
+      },
+      "outputs": [],
       "source": [
         "llm = ChatGroq(\n",
         "    model=\"llama3-8b-8192\",\n",
@@ -148,47 +139,47 @@
         "    top_k=40,\n",
         "    max_output_tokens=512\n",
         ")"
-      ],
-      "metadata": {
-        "id": "B5I5PCsKNP2N"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### A. Basic LLM Call"
-      ],
       "metadata": {
         "id": "BjKuXcNWQ_EL"
-      }
+      },
+      "source": [
+        "### A. Basic LLM Call"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ai_msg = llm.invoke(\"Provide python code of sudoku\")\n",
-        "print(ai_msg.content)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cVNLONKDQ37h"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "ai_msg = llm.invoke(\"Provide python code of sudoku\")\n",
+        "print(ai_msg.content)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### B. Prompt Template Example with System and Human Roles"
-      ],
       "metadata": {
         "id": "WsGmNamtRGp9"
-      }
+      },
+      "source": [
+        "### B. Prompt Template Example with System and Human Roles"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LgHiTuGCogpC"
+      },
+      "outputs": [],
       "source": [
-        "ai_msg =from langchain_core.prompts import ChatPromptTemplate\n",
+        "from langchain_core.prompts import ChatPromptTemplate\n",
         "\n",
         "prompt = ChatPromptTemplate.from_messages([\n",
         "    (\"system\", \"You are a helpful assistant that explains problems step-by-step.\"),\n",
@@ -200,12 +191,21 @@
         "\n",
         "ai_msg = chain.invoke({\"problem\": \"Provide python code of sudoku\"})\n",
         "print(ai_msg.content)"
-      ],
-      "metadata": {
-        "id": "LgHiTuGCogpC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
